--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Wes for Salt Lake County Council
+title: Wes Long for Salt Lake County Council
 email: wes4saltlake@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Wes believes that we are all the government, and as such, we are better off when we participate and keep our community affairs accessible and honest.
